--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <script src="https://at.alicdn.com/t/font_315176_421y0o6pbk9.js"></script>
     <title>xview</title>
   </head>
   <body>
